src/objects/Market_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <label>Customer Feedback</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Debt_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education Debt Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Feedback__c</fullName>
        <label>Industry Feedback</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Competition__c</fullName>
        <label>Market Competition</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Feedback_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field shows the Account that is tied to this Opportunity - and Market Feedback is associated here.</inlineHelpText>
        <label>Market Feedback Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Feedback</relationshipLabel>
        <relationshipName>Market_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Market Feedback</relationshipLabel>
        <relationshipName>Market_Feedback1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Professional_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Professional Services</label>
        <type>Checkbox</type>
    </fields>
    <label>Market Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Customer_Feedback__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Market Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Feedback</pluralLabel>
    <recordTypes>
        <fullName>Market_Feedback</fullName>
        <active>true</active>
        <label>Market Feedback</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>